# Capricorn

./: CMakeLists.txt  CMakePresets.json  HACKING.md  README.md  vcpkg.json
cmake/: dev-mode.cmake  install-rules.cmake  variables.cmake
source/: lib.cpp
test/: CMakeLists.txt
test/source/: Capricorn_test.cpp
